--- a/playground.ipynb
+++ b/playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,63 @@
     "from transformers import AutoModelForSeq2SeqLM, AutoTokenizer, T5ForConditionalGeneration\n",
     "\n",
     "# Read train data from parquet file in data/train-00000-of-00001-be16864a4346f8b0.parquet\n",
-    "train = pd.read_parquet('data/train-00000-of-00001-be16864a4346f8b0.parquet')\n",
+    "train = pd.read_parquet('data/sat/train-00000-of-00001-be16864a4346f8b0.parquet')\n",
     "\n",
     "# Read test data from parquet file in data/test-00000-of-00001-8026e2bb5cef708b.parquet\n",
-    "test = pd.read_parquet('data/test-00000-of-00001-8026e2bb5cef708b.parquet')\n",
+    "test = pd.read_parquet('data/sat/test-00000-of-00001-8026e2bb5cef708b.parquet')\n",
     "\n",
     "# Read validation data from parquet file in data/validation-00000-of-00001-6242383510343be0.parquet\n",
-    "validation = pd.read_parquet('data/validation-00000-of-00001-6242383510343be0.parquet')"
+    "validation = pd.read_parquet('data/sat/validation-00000-of-00001-6242383510343be0.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q = [i[:100] for i in train['text']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'SAT READING COMPREHENSION TEST\\n\\nThis passage is adapted from George Eliot, Silas Marner.\\nOriginally '"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'SAT READING COMPREHENSION TEST\\n\\nThis passage is adapted from George Eliot, Silas Marner.\\nOriginally published in 1861. Silas was a weaver and a\\nnotorious miser, but then the gold he had hoarded was\\nstolen. Shortly after, Silas adopted a young child, Eppie, the\\ndaughter of an impoverished woman who had died\\nsuddenly.\\n\\n    Unlike the gold which needed nothing, and must\\nbe worshipped in close-locked solitude—which was\\nhidden away from the daylight, was deaf to the song\\nof birds, and started to no human tones—Eppie was a\\ncreature of endless claims and ever-growing desires,\\nseeking and loving sunshine, and living sounds, and\\nliving movements; making trial of everything, with\\ntrust in new joy, and stirring the human kindness in\\nall eyes that looked on her. The gold had kept his\\nthoughts in an ever-repeated circle, leading to\\nnothing beyond itself; but Eppie was an object\\ncompacted of changes and hopes that forced his\\nthoughts onward, and carried them far away from\\ntheir old eager pacing towards the same blank\\nlimit—carried them away to the new things that\\nwould come with the coming years, when Eppie\\nwould have learned to understand how her father\\nSilas cared for her; and made him look for images of\\nthat time in the ties and charities that bound together\\nthe families of his neighbors. The gold had asked that\\nhe should sit weaving longer and longer, deafened\\nand blinded more and more to all things except the\\nmonotony of his loom and the repetition of his web;\\nbut Eppie called him away from his weaving, and\\nmade him think all its pauses a holiday, reawakening\\nhis senses with her fresh life, even to the old\\nwinter-flies that came crawling forth in the early\\nspring sunshine, and warming him into joy because\\nshe had joy.\\n    And when the sunshine grew strong and lasting,\\nso that the buttercups were thick in the meadows,\\nSilas might be seen in the sunny mid-day, or in the\\nlate afternoon when the shadows were lengthening\\nunder the hedgerows, strolling out with uncovered\\nhead to carry Eppie beyond the Stone-pits to where\\nthe flowers grew, till they reached some favorite bank\\nwhere he could sit down, while Eppie toddled to\\npluck the flowers, and make remarks to the winged\\nthings that murmured happily above the bright\\npetals, calling “Dad-dad’s” attention continually by\\nbringing him the flowers. Then she would turn her\\near to some sudden bird-note, and Silas learned to\\nplease her by making signs of hushed stillness, that\\nthey might listen for the note to come again: so that\\nwhen it came, she set up her small back and laughed\\nwith gurgling triumph. Sitting on the banks in this\\nway, Silas began to look for the once familiar herbs\\nagain; and as the leaves, with their unchanged outline\\nand markings, lay on his palm, there was a sense of\\ncrowding remembrances from which he turned away\\ntimidly, taking refuge in Eppie’s little world, that lay\\nlightly on his enfeebled spirit.\\n    As the child’s mind was growing into knowledge,\\nhis mind was growing into memory: as her life\\nunfolded, his soul, long stupefied in a cold narrow\\nprison, was unfolding too, and trembling gradually\\ninto full consciousness.\\n    It was an influence which must gather force with\\nevery new year: the tones that stirred Silas’ heart\\ngrew articulate, and called for more distinct answers;\\nshapes and sounds grew clearer for Eppie’s eyes and\\nears, and there was more that “Dad-dad” was\\nimperatively required to notice and account for.\\nAlso, by the time Eppie was three years old, she\\ndeveloped a fine capacity for mischief, and for\\ndevising ingenious ways of being troublesome, which\\nfound much exercise, not only for Silas’ patience, but\\nfor his watchfulness and penetration. Sorely was poor\\nSilas puzzled on such occasions by the incompatible\\ndemands of love.\\n\\n\\n\\nQuestion 3:\\nWhich statement best describes a technique the narrator uses to represent Silas’s character before he adopted Eppie?\\nA) The narrator emphasizes Silas’s former obsession with wealth by depicting his gold as requiring certain behaviors on his part.\\nB) The narrator underscores Silas’s former greed by describing his gold as seeming to reproduce on its own.\\nC) The narrator hints at Silas’s former antisocial attitude by contrasting his present behavior toward his neighbors with his past behavior toward them.\\nD) The narrator demonstrates Silas’s former lack of self-awareness by implying that he is unable to recall life before Eppie.\\n\\nAnswer:'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z = train['text'].to_list()\n",
+    "z[0]"
    ]
   },
   {
@@ -1535,6 +1585,19 @@
    "source": [
     "# results.to_csv('results/large-MMLU-globalfacts-results.csv')\n",
     "# errors.to_csv('results/large-MMLU-globalfacts-errors.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import T5ForConditionalGeneration, AutoTokenizer\n",
+    "# import torch\n",
+    "\n",
+    "model = T5ForConditionalGeneration.from_pretrained(\"google/flan-ul2\")                                                                 \n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"google/flan-ul2\")"
    ]
   }
  ],
